--- a/demo.html
+++ b/demo.html
@@ -19,8 +19,7 @@
             console.log(val);
         });
 
-        data.b.c = 2;
-        data.b.c = 4;
+        data.b = { c: 2 };
     </script>
 </body>
 </html>
