--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -7,7 +7,7 @@
 <body>
     <input id="text" />
     <p>hello <span id="span"></span></p>
-    <script src="../vo.js"></script>
+    <script src="../../vo.js"></script>
     <script>
         var data = { name: '' };
         var span = document.querySelector('#span');
