--- a/example/basic.html
+++ b/example/basic.html
@@ -7,13 +7,13 @@
 <body>
     <input id="text" />
     <p>hello <span id="span"></span></p>
-    <script src="../../vo.js"></script>
+    <script src="../dist/vo.js"></script>
     <script>
         var data = { name: '' };
         var span = document.querySelector('#span');
         var text = document.querySelector('#text');
 
-        vo(data).watch('name', (val) => {
+        vo.observe(data).watch('name', (val) => {
             span.innerHTML = val;
         });
 
