--- a/example/basic.html
+++ b/example/basic.html
@@ -10,15 +10,16 @@
     <script src="../dist/vo.js"></script>
     <script>
         var data = { name: '' };
+        
         var span = document.querySelector('#span');
         var text = document.querySelector('#text');
 
-        vo.observe(data).watch('name', (val) => {
+        var ob = vo.proxy(data).watch('name', (val) => {
             span.innerHTML = val;
         });
 
         text.addEventListener('input', () => {
-            data.name = text.value;
+            ob.name = text.value;
         }, false);
     </script>
 </body>
