--- a/example/basic.html
+++ b/example/basic.html
@@ -7,10 +7,10 @@
 <body>
     <input id="text" />
     <p>hello <span id="span"></span></p>
-    <script src="../dist/vo.js"></script>
+    <script src="../dist/vo.min.js"></script>
     <script>
         var data = { name: '' };
-        
+
         var span = document.querySelector('#span');
         var text = document.querySelector('#text');
 
