--- a/example/vdom.html
+++ b/example/vdom.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="lib/snabbdom.js"></script>
-    <script src="../dist/vo.js"></script>
+    <script src="lib/snabbdom.min.js"></script>
+    <script src="../dist/vo.min.js"></script>
     <script>
         var { h, patch } = snabbdom;
 
